--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://ec2-3-39-8-93.ap-northeast-2.compute.amazonaws.com:8080"
 }
